--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -14,51 +14,53 @@
     "@types/classnames": "2.2.3",
     "@types/history": "4.6.2",
     "@types/node": "8.0.53",
-    "@types/react": "^16.0.25",
+    "@types/react": "16.0.25",
     "@types/react-dom": "16.0.3",
     "@types/react-redux": "5.0.13",
     "@types/react-router": "4.0.18",
     "@types/redux-actions": "2.2.2",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
-    "awesome-typescript-loader": "^3.4.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "postcss": "^6.0.14",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.2.1",
-    "react-hot-loader": "^3.1.3",
-    "redux-devtools-extension": "^2.13.2",
-    "style-loader": "^0.19.0",
-    "typescript": "^2.6.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "awesome-typescript-loader": "3.4.0",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
+    "postcss": "6.0.14",
+    "postcss-browser-reporter": "0.5.0",
+    "postcss-cssnext": "3.0.2",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
+    "postcss-reporter": "5.0.0",
+    "postcss-url": "7.2.1",
+    "react-hot-loader": "3.1.3",
+    "redux-devtools-extension": "2.13.2",
+    "style-loader": "0.19.0",
+    "typescript": "2.6.1",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "classnames": "^2.2.5",
-    "less": "^3.0.0",
-    "less-loader": "^4.0.5",
-    "material-ui": "^0.20.0",
+    "axios": "0.17.1",
+    "classnames": "2.2.5",
+    "less": "3.0.0",
+    "less-loader": "4.0.5",
+    "material-ui": "0.20.0",
     "ramda": "0.25.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0",
-    "rx": "^4.1.0",
-    "socket.io-client": "^2.0.4"
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "4.0.8",
+    "redux": "3.7.2",
+    "redux-actions": "2.2.1",
+    "redux-logger": "3.0.6",
+    "redux-observable": "0.18.0",
+    "redux-saga": "0.16.0",
+    "rx": "4.1.0",
+    "rxjs": "5.5.6",
+    "socket.io-client": "2.0.4"
   }
 }
