--- a/halla-db-server/package.json
+++ b/halla-db-server/package.json
@@ -17,17 +17,17 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "amqplib": "^0.5.2",
-    "mongoose": "^5.0.7",
-    "ramda": "^0.25.0"
+    "amqplib": "0.5.2",
+    "mongoose": "5.0.7",
+    "ramda": "0.25.0"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.5.6",
-    "@types/mongoose": "^5.0.2",
-    "@types/ramda": "^0.25.18",
-    "nodemon": "^1.13.0",
-    "ts-node": "^5.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "@types/amqplib": "0.5.6",
+    "@types/mongoose": "5.0.2",
+    "@types/ramda": "0.25.18",
+    "nodemon": "1.13.0",
+    "ts-node": "5.0.0",
+    "tslint": "5.9.1",
+    "typescript": "2.7.2"
   }
 }
