--- a/halla-socket-server/package.json
+++ b/halla-socket-server/package.json
@@ -17,18 +17,18 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "@types/amqplib": "^0.5.6",
-    "@types/bluebird": "^3.5.20",
-    "@types/ramda": "^0.25.18",
-    "amqplib": "^0.5.2",
-    "ramda": "^0.25.0",
-    "socket.io": "^2.0.4"
+    "@types/amqplib": "0.5.6",
+    "@types/bluebird": "3.5.20",
+    "@types/ramda": "0.25.18",
+    "amqplib": "0.5.2",
+    "ramda": "0.25.0",
+    "socket.io": "2.0.4"
   },
   "devDependencies": {
-    "@types/socket.io": "^1.4.31",
-    "nodemon": "^1.13.0",
-    "ts-node": "^5.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "@types/socket.io": "1.4.31",
+    "nodemon": "1.13.0",
+    "ts-node": "5.0.0",
+    "tslint": "5.9.1",
+    "typescript": "2.7.2"
   }
 }
