--- a/halla-db-server/package.json
+++ b/halla-db-server/package.json
@@ -13,7 +13,7 @@
     "serve": "node dist/index.js",
     "watch-node": "nodemon dist/index.js",
     "build-ts": "tsc",
-    "watch-ts": "tsc -w",
+    "watch": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
