--- a/halla-db-server/package.json
+++ b/halla-db-server/package.json
@@ -17,13 +17,13 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "amqplib": "^0.5.2",
     "mongoose": "^5.0.7",
+    "rabbit.js": "^0.4.4",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.5.6",
     "@types/mongoose": "^5.0.2",
+    "@types/rabbit.js": "^0.4.31",
     "@types/ramda": "^0.25.18",
     "nodemon": "^1.13.0",
     "ts-node": "^5.0.0",
