--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -37,6 +37,7 @@
     "redux-devtools-extension": "^2.13.2",
     "style-loader": "^0.19.0",
     "typescript": "^2.6.1",
+    "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
@@ -46,6 +47,7 @@
     "classnames": "^2.2.5",
     "less": "^3.0.0",
     "less-loader": "^4.0.5",
+    "m-react-splitters": "^1.0.4",
     "material-ui": "^0.20.0",
     "ramda": "0.25.0",
     "react": "^16.1.1",
