--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -47,7 +47,6 @@
     "classnames": "^2.2.5",
     "less": "^3.0.0",
     "less-loader": "^4.0.5",
-    "m-react-splitters": "^1.0.4",
     "material-ui": "^0.20.0",
     "ramda": "0.25.0",
     "react": "^16.1.1",
@@ -55,6 +54,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-splitter-layout": "^3.0.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
