--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@types/classnames": "2.2.3",
     "@types/history": "4.6.2",
+    "@types/material-ui": "^0.21.1",
     "@types/node": "8.0.53",
+    "@types/ramda": "^0.25.20",
     "@types/react": "^16.0.25",
     "@types/react-dom": "16.0.3",
     "@types/react-redux": "5.0.13",
     "@types/react-router": "4.0.18",
+    "@types/react-tooltip": "^3.3.4",
     "@types/redux-actions": "2.2.2",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
@@ -55,6 +58,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-splitter-layout": "^3.0.0",
+    "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
