--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -21,6 +21,7 @@
     "@types/react-router": "4.0.18",
     "@types/react-tooltip": "^3.3.4",
     "@types/redux-actions": "2.2.2",
+    "@types/socket.io-client": "^1.4.32",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
     "awesome-typescript-loader": "^3.4.0",
