--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -18,18 +18,21 @@
     "@types/react": "^16.0.25",
     "@types/react-dom": "16.0.3",
     "@types/react-redux": "5.0.13",
+    "@types/react-redux-toastr": "^7.0.10",
     "@types/react-router": "4.0.18",
+    "@types/react-toastr": "^3.0.1",
     "@types/react-tooltip": "^3.3.4",
     "@types/redux-actions": "2.2.2",
     "@types/socket.io-client": "^1.4.32",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
     "awesome-typescript-loader": "^3.4.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "postcss": "^6.0.14",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.0.2",
@@ -39,7 +42,8 @@
     "postcss-url": "^7.2.1",
     "react-hot-loader": "^3.1.3",
     "redux-devtools-extension": "^2.13.2",
-    "style-loader": "^0.19.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.19.1",
     "typescript": "^2.6.1",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^0.6.2",
@@ -56,6 +60,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
+    "react-redux-toastr": "^7.2.3",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-splitter-layout": "^3.0.0",
