--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -56,6 +56,7 @@
     "less": "^3.0.0",
     "less-loader": "^4.0.5",
     "material-ui": "^0.20.0",
+    "moment": "^2.21.0",
     "ramda": "0.25.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
