TSLint rules added

--- a/halla-app/package.json
+++ b/halla-app/package.json
@@ -44,7 +44,8 @@
     "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.19.1",
-    "typescript": "^2.6.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
