--- a/halla-socket-server/tsconfig.json
+++ b/halla-socket-server/tsconfig.json
@@ -3,7 +3,12 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es6",
-        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": false,
+        "noImplicitAny": false,
+        "noImplicitReturns": false,
+        "removeComments": true,
+        "strictNullChecks": false,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
