--- a/halla-socket-server/package.json
+++ b/halla-socket-server/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "npm run serve",
     "build": "npm run build-ts && npm run tslint",
-    "serve": "node dist/halla-socket-server/src/index.js",
-    "watch-node": "nodemon dist/halla-socket-server/src/index.js",
+    "serve": "node dist/src/index.js",
+    "watch-node": "nodemon dist/src/index.js",
     "build-ts": "tsc",
     "watch": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
