--- a/halla-db-server/package.json
+++ b/halla-db-server/package.json
@@ -17,21 +17,21 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "jsonwebtoken": "^8.2.0",
-    "mongoose": "^5.0.7",
-    "rabbit.js": "^0.4.4",
-    "ramda": "^0.25.0"
+    "bcrypt": "1.0.3",
+    "jsonwebtoken": "8.2.0",
+    "mongoose": "5.0.7",
+    "rabbit.js": "0.4.4",
+    "ramda": "0.25.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^1.0.0",
-    "@types/jsonwebtoken": "^7.2.6",
-    "@types/mongoose": "^5.0.2",
-    "@types/rabbit.js": "^0.4.31",
-    "@types/ramda": "^0.25.18",
-    "nodemon": "^1.13.0",
-    "ts-node": "^5.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "@types/bcrypt": "1.0.0",
+    "@types/jsonwebtoken": "7.2.6",
+    "@types/mongoose": "5.0.2",
+    "@types/rabbit.js": "0.4.31",
+    "@types/ramda": "0.25.18",
+    "nodemon": "1.13.0",
+    "ts-node": "5.0.0",
+    "tslint": "5.9.1",
+    "typescript": "2.7.2"
   }
 }
